# gettext-cmake

./: CMakeLists.txt  README.md
